--- a/src/components/HeroSlider/Hero.scss
+++ b/src/components/HeroSlider/Hero.scss
@@ -39,6 +39,7 @@
             .hero-slider__img{
                 height: 100%;
                 object-fit: cover;
+                width: 100%;
             }
         }
     }
