--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,37 +1,11 @@
 .banner{
-    background-image: url('../../assets/img/banner/b2.jpg');
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 40vh;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    .banner__title{
-        font-size: 1.8rem;
-        font-weight: 500;
-    }
-    .banner__des{
-        font-size: 2.6rem;
-        font-weight: 600;
-        span{
-            color: red;
-        }
-    }
-    .banner__btn{
-        padding: 14px 22px;
-        background-color: #fff;
-        border: none;
-        outline: none;
-        border-radius: 4px;
-        font-size: 1.8rem;
-        transition: 0.2s ease;
+   
+    &__img{
+        width: 100%;
+        transition: transform .6s ease;
+
         &:hover{
-            background-color: var(--extra-color);
-            color: #fff;
+            transform: scale(0.94);
         }
     }
 }
