--- a/src/pages/clients/Home/Home.scss
+++ b/src/pages/clients/Home/Home.scss
@@ -2,3 +2,12 @@
     border-left: 1px solid #f1f1f1;
     border-top: 1px solid #f1f1f1;
 }
+
+.product__category{
+
+}
+
+.product__category__list{
+    border-left: 1px solid #f1f1f1;
+    margin-right: -1px;
+}
