--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -208,3 +208,90 @@ select{
     margin-bottom: 6px;
     margin-top: -6px;
 }
+
+//Layout Column
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -5px;
+    margin-right: -5px;
+}
+//Chia thành 12 cột
+.col-1{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 8.3334%;
+}
+
+.col-2{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.6667%;
+}
+
+.col-3{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 25%;
+}
+
+.col-4{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 33.3334%;
+}
+
+.col-5{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 41.6667%;
+}
+
+.col-6{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 50%;
+}
+
+.col-7{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 58.3334%;
+}
+
+.col-8{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 66.6667%;
+}
+
+.col-9{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 75%;
+}
+
+.col-10{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 83.3334%;
+}
+
+.col-11{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 91.6667%;
+}
+
+.col-12{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 100%;
+}
+
+.col-12-5{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 25%;
+}
+//end Layout Column
