--- a/src/pages/admin/components/Header/Header.scss
+++ b/src/pages/admin/components/Header/Header.scss
@@ -1,5 +1,5 @@
 .header__admin{
-    background-color: rgb(0, 117, 117);;
+    background-color: rgb(0, 117, 117);
     display: flex;
    justify-content: flex-end;
     gap: 14px;
@@ -9,7 +9,7 @@
     // position: fixed;
     // top: 0;
     // right: 0;
-    // left: 0;
+    // left: 17%;
 
     .header__right{
         margin-right: 26px;
