--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,51 +1,49 @@
 .sidebar{
-    background-color: rgb(0, 117, 117);;
+    background-color: #fff;
     height: 100vh;
-    width: 18%;
+    position: fixed;
+    left: 0;    
+    top: 0;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    //border-right: 1px solid rgba(0,0,0,0.2);
-    position: fixed;
-    left: 0;
-    top: 0;
     box-shadow: rgb(0 0 0 / 15%) 0px 10px 20px;
 
     &__logo{
-        margin-bottom: 10px;
-        font-size: 2.8rem;
+        font-size: 2.7rem;
         font-weight: 600;
-        color: #fff;
-        border-bottom: 1px solid #fff;
-        padding-bottom: 10px;
     }
 
     &__list{
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
-
+        padding-left: 0 !important;
+        margin-bottom: 0 !important;
+       
         .active{
-            color: #fff;
-            font-weight: 600;
+            padding: 10px;
             text-decoration: none;
-            padding-left: 18px;
-            
+            font-size: 1.5rem;
+            background-color: #0d6efd;
+            border-radius: 4px;
+            width: 100%;
+            display: inline-block;
+            color: #fff;
+            &:hover{
+                color: #fff;
+            }
         }
 
         &-item{
             list-style: none;
-            margin: 6px 0;
-            padding: 6px 4px;
-            &:hover{
-                background-color: rgba(0,0,0,0.2);
-            }
-
+    
             .sidebar__list-link{
-                color: #fff;
+                padding: 10px;
                 text-decoration: none;
-                padding-left: 18px;
                 font-size: 1.5rem;
+                background-color: transparent;
+                border-radius: 4px;
+                width: 100%;
+                display: inline-block;
+              
             }
         }
 
