--- a/src/pages/admin/components/Header/Header.scss
+++ b/src/pages/admin/components/Header/Header.scss
@@ -1,15 +1,16 @@
 .header__admin{
-    background-color: rgb(0, 117, 117);
+    background-color: #fff;
     display: flex;
-   justify-content: flex-end;
+    justify-content: flex-end;
     gap: 14px;
     height: 60px;
     line-height: 60px;
     box-shadow: rgb(0 0 0 / 15%) 0px 10px 20px;
-    // position: fixed;
-    // top: 0;
-    // right: 0;
-    // left: 17%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 18%;
 
     .header__right{
         margin-right: 26px;
@@ -19,11 +20,10 @@
 
         .header__admin__name{
             font-size: 1.5rem;
-            color: #fff;
         }
 
         .header__admin__link{
-            color: #fff;
+
         }
 
         .header__admin__logout{
@@ -31,7 +31,6 @@
             padding-right: 18px;
             cursor: pointer;
             font-size: 1.6rem;
-            color: #fff;
     
             &:hover{
                 opacity: 0.8;
