--- a/src/components/DefaultLayout/Footer/Footer.scss
+++ b/src/components/DefaultLayout/Footer/Footer.scss
@@ -39,6 +39,8 @@
                 }
                 .item__link{
                     color: #000;
+                    font-size: 1.5rem;
+                    line-height: 1.75;
                     &:hover{
                         color: var(--primary-color);
                     }
@@ -46,6 +48,7 @@
             }
             .contact__item{
                margin-bottom: 8px;
+               list-style: none;
             }
 
         }
