--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,9 +1,10 @@
 .sidebar{
     background-color: #fff;
-    height: 100vh;
     position: fixed;
     left: 0;    
     top: 0;
+    bottom: 0;
+    right: 82%;
     padding: 20px;
     display: flex;
     flex-direction: column;
