--- a/src/components/HeroSlider/Hero.scss
+++ b/src/components/HeroSlider/Hero.scss
@@ -1,4 +1,4 @@
-.section_slide{
+.slide{
     height: 400px;
 
     .scroll{
@@ -12,14 +12,11 @@
         }
     }
 
-        .navigation__list{
+        .nav__list{
             height: calc(100% - 20%);
             border: 1px solid #f1f1f1;
             list-style: none;
             overflow: scroll;
-
-          
-
 
             .menu-item{
                 position: relative;
@@ -63,15 +60,22 @@
                 }
             }
     
-            .navigation__list-item{
+            .nav__item{
                 padding: 8px 12px;
                 box-shadow: inset 0px 1px 0px #f1f1f1 ;
     
-                .navigation__list-link{
+                .nav__item-link{
                     text-decoration: none;
                     color: var(--text-color);
                     font-weight: 300;
                     font-size: 1.5rem;
+                    display: flex;
+                    align-items: center;
+                    gap: 4px;
+
+                    .nav__item-icon{
+                        max-width: 24px;
+                    }
                 }     
             }
         }
@@ -119,4 +123,9 @@
   //tablet
   @media (min-width: 740px) and (max-width: 1023px) {
         
+  }
+
+  .loading-item{
+    width: 100%;
+    height: 20px;
   }
