--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -3,6 +3,9 @@
     margin-left: -1px;
     padding: 12px;
     cursor: pointer;
+    width: 20%;
+
+   
 
     .product-card__link{
         text-decoration: none;
@@ -78,4 +81,25 @@
         }
     }
     
+}
+@media screen and (min-width: 769px) and (max-width: 1024px){
+       
+    .product-card{
+        width: 33.3334%;
+    }
+}
+
+@media screen and (max-width: 769px){
+    .product-card{
+        width: 50%;
+    }
+}
+
+.product-card__image-loading{
+    width: 100%;
+    height: 180px;
+}
+.product-cart__item-loading{
+    width: 100%;
+    height: 20px;
 }
