--- a/src/pages/clients/Home/Home.scss
+++ b/src/pages/clients/Home/Home.scss
@@ -11,3 +11,8 @@
     border-left: 1px solid #f1f1f1;
     margin-right: -1px;
 }
+
+.product__cate-list{
+    display: flex;
+    flex-wrap: wrap;
+}
