--- a/src/pages/clients/Home/Home.scss
+++ b/src/pages/clients/Home/Home.scss
@@ -16,3 +16,12 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.loading-brand{
+    width: 100%;
+    height: 300px;
+}
+.loading-name{
+    width: 240px;
+    height: 20px;
+}
