--- a/src/components/Breadcrumb/Breadcrumb.scss
+++ b/src/components/Breadcrumb/Breadcrumb.scss
@@ -2,6 +2,7 @@
     margin-top: 10px;
     display: flex;
     list-style: none;
+    align-items: center;
 
     .sub{
         color: #999 !important;
@@ -12,5 +13,11 @@
         color: var(--text-color);
         font-size: 1.5rem;
         margin-right: 4px;
+    }
+
+    .icon{
+        font-size: 2rem;
+        font-weight: 300;
+        margin: 0 4px;
     }
 }
