--- a/src/pages/clients/Auth/Auth.scss
+++ b/src/pages/clients/Auth/Auth.scss
@@ -198,8 +198,15 @@
 
 
 .auth-login{
-    margin: 0 auto;
-    width: 500px;
+   // width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .login-form{
+        width: 500px;
+    }
 
     .other-login{
         text-align: center;
