update some thing

--- a/src/components/DefaultLayout/Footer/Footer.scss
+++ b/src/components/DefaultLayout/Footer/Footer.scss
@@ -7,6 +7,11 @@
         flex-wrap: wrap;
         padding: 40px 0;
 
+        .footer__logo{
+            width: 210px;
+            margin: 10px 0;
+        }
+
         .footer__content{
 
             .image__method-payments{
