--- a/src/pages/clients/Home/Home.scss
+++ b/src/pages/clients/Home/Home.scss
@@ -25,3 +25,24 @@
     width: 240px;
     height: 20px;
 }
+
+.product__show-all{
+    margin: 20px 0 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .product__show-link{
+        padding: 10px 28px;
+        border-radius: 6px;
+        font-weight: 400;
+        border: 1px solid var(--extra-color);
+        color: var(--extra-color);
+        background-color: transparent;
+        font-size: 1.5rem;
+        &:hover{
+            background-color: var(--extra-color);
+            color: #fff;
+        }
+    }
+}
