--- a/src/pages/admin/components/Product/Product.scss
+++ b/src/pages/admin/components/Product/Product.scss
@@ -16,6 +16,7 @@
             font-weight: 600;
             border-radius: 4px;
             cursor: pointer;
+            margin-left: 4px;
         }
     }
 
