--- a/src/components/DefaultLayout/Footer/Footer.scss
+++ b/src/components/DefaultLayout/Footer/Footer.scss
@@ -7,19 +7,36 @@
         flex-wrap: wrap;
         padding: 40px 0;
 
-        .footer__logo{
-            width: 210px;
-            margin: 10px 0;
+        //General
+        .title{
+            margin-bottom: 10px;
         }
 
-        .footer__content{
+        .list__group{
+            .group__item{
+                list-style: none;
+            }
+            .item__link{
+                color: #000;
+                font-size: 1.5rem;
+                line-height: 1.75;
+                &:hover{
+                    color: var(--primary-color);
+                }
+            }
+        }
 
-            .image__method-payments{
-                max-width: 250px;
+        .footer__info{
+            flex-basis: 30%;
+            .desc{
+                font-size: 1.5rem;
+                font-weight: 300;
             }
-            &:nth-child(1){
-              flex-basis: 30%;
+            .logo{
+                width: 210px;
+                margin: 10px 0;
             }
+
             p{
                 font-size: 1.5rem;
                 font-weight: 300;
@@ -29,33 +46,57 @@
                     font-weight: 600;
                 }
             }
-    
-            .desc{
-                font-size: 1.5rem;
-                font-weight: 300;
-            }
-            .title{
-                margin-bottom: 10px;
+        }
+
+
+
+        .footer__policy{
+
+        }
+        .footer__guide{
+
+        }
+        .footer__contact{
+            .image__method-payments{
+                max-width: 250px;
             }
 
-            .list__group{
-                .group__item{
-                    list-style: none;
-                }
-                .item__link{
-                    color: #000;
-                    font-size: 1.5rem;
-                    line-height: 1.75;
-                    &:hover{
-                        color: var(--primary-color);
-                    }
-                }
-            }
             .contact__item{
-               margin-bottom: 8px;
-               list-style: none;
-            }
-
+                margin-bottom: 8px;
+                list-style: none;
+             }
         }
     }
 }
+
+@media (max-width: 730px){
+    .footer__main{
+        flex-direction: column;
+    }
+}
+@media (min-width: 740px) and (max-width:1023px){
+   
+    .footer__contact,
+    .footer__guide,
+    .footer__info,
+    .footer__policy{
+        margin-top: 20px;
+    }
+    .footer__info{
+     flex-basis: 50% !important; 
+    }
+
+    .footer__policy{
+        flex-basis: 50%;
+    }
+
+    .footer__contact{
+        flex-basis: 50%;
+    }
+
+    .footer__guide{
+        flex-basis: 50%;
+    }
+   
+ }
+
