--- a/src/components/DefaultLayout/SubHeader/SubHeader.scss
+++ b/src/components/DefaultLayout/SubHeader/SubHeader.scss
@@ -54,3 +54,9 @@
         display: none;
     }
 }
+
+@media (min-width: 767px) and (max-width: 1023px){
+    .subheader{
+        display: none;
+    }
+}
