--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -50,6 +50,12 @@ body{
     font-size: 1.6rem;
 }
 
+@media screen and (max-width: 767px) {
+    body{
+        //overflow-x: hidden;
+    }
+}
+
 img{
     width: 100%;
 }
