--- a/src/components/Breadcrumb/Breadcrumb.scss
+++ b/src/components/Breadcrumb/Breadcrumb.scss
@@ -3,7 +3,8 @@
     display: flex;
     list-style: none;
     align-items: center;
-
+    flex-wrap: wrap;
+    
     .sub{
         color: #999 !important;
     }
