--- a/src/components/CartItem.js/CartItem.scss
+++ b/src/components/CartItem.js/CartItem.scss
@@ -2,74 +2,84 @@
     margin-top: 10px;
     padding-top: 10px;
     display: flex;
-    gap: 20px;
     align-items: center;
+    justify-content: space-between;
 
     & + .cart__item{
         border-top: 1px solid #eee;
     }
 
-    .cart__item-close{
-        font-size: 1.4rem;
+    .cart__item-remove{
+        font-size: 1.8  rem;
         color: #c3c3c3;
         cursor: pointer;
         padding: 16px;
     }
 
     .cart__item-img{
-        width: 90px;
-        height: 90px;
+       max-width: 90px;
         object-fit: cover;
     }
 
-    .cart__item-name{
-        white-space: pre-wrap;
-        font-size: 1.5rem;
-        font-weight: 300;
-        flex-basis: 280px;
-    }
-
-    .cart__item-price{
-        color: #ed3324;
-        font-size: 1.4rem;
-        sup{
-            text-decoration:underline;
-        }
-        flex: 1;
-    }
-
-    .total-price{
-        font-weight: 600;
-
-        sup{
-            font-weight: 600;
-        }
-    }
-
-    .cart__item-qty{
+    .cart__item-info{
+        flex-basis: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
-        font-size: 1.5rem;
-        font-weight: 300;
-        text-align: center;
-        border: 1px solid #ced4da;
-        padding: 6px;
-        border-radius: 4px;
+        justify-content: space-between;
+        gap: 12px;
 
-        .cart__item-qty-btn{
-            width: 40px;
-            cursor: pointer;
-
-            i{
-                font-size: 1.3rem;
-                opacity: 0.8;
+        .cart__item-name{
+            white-space: pre-wrap;
+            font-size: 1.5rem;
+            font-weight: 300;
+            flex-basis: 100%;
+        }
+    
+        .cart__item-price{
+            color: #ed3324;
+            font-size: 1.4rem;
+            sup{
+                text-decoration:underline;
+            }
+            flex: 1;
+        }
+    
+        .cart__item-qty{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            font-weight: 300;
+            text-align: center;
+            border: 1px solid #ced4da;
+            padding: 6px;
+            border-radius: 4px;
+    
+            .cart__item-qty-btn{
+                width: 40px;
+                cursor: pointer;
+    
+                i{
+                    font-size: 1.3rem;
+                    opacity: 0.8;
+                }
+            }
+    
+            .cart__item-qty-input{
+                width: 100%;
+                font-size: 1.6rem;
             }
         }
+    }
+}
 
-        .cart__item-qty-input{
-            width: 40px;
-            font-size: 1.6rem;
-        }
+@media (max-width: 767px) {
+    .cart__item-info{
+        flex-direction: column;
+        align-items: flex-start !important;
+       
+    }
+    .cart__item{
+        margin-bottom: 20px;
     }
 }
