--- a/src/pages/clients/Checkout/Checkout.scss
+++ b/src/pages/clients/Checkout/Checkout.scss
@@ -1,126 +1,72 @@
-
 .checkout{
     display: flex;
-    padding: 0 28px;
+    padding: 20px;
+
    .checkout__info{
-        width: 68%;
-        height: 100vh;
-        border-right: 1px solid #ddd;
-        padding: 20px 20px 0;
-       
+        width: 40%;
         .checkout__logo{
             .checkout__logo-link{
                 text-decoration: none;
                 .checkout__logo-img{
-                    width: 24%;
+                    width: 40%;
                 }
             }
         }
-        .checkout__content{
-            display: flex;
-            margin-top: 16px;
-            gap: 20px;
-            .content__info{
-                width: 50%;
-                h3{
-                    margin-bottom: 8px;
-                }
+
+        .content__info{
+            padding-right: 20px;
+            margin-top: 10px;
+            h3{
+                margin-bottom: 8px;
+                font-size: 2.8rem;
             }
-
-            .content__right{
-                flex: 1;
-
-                .content__delivery{
-                    .delivery__body{
-                        margin: 10px 0;
-                        border: 1px solid #ccc;
-                        padding: 18px 20px;
-                        display: flex;
-                        justify-content: space-between;
-                        label{
-                            margin-left: 6px;
-                            flex: 1;
-                            font-weight:300;
-                        }
-                        span{
-                            font-size: 1.4rem;
-                        }
-                    }
-                }
-                .content__payment{
-                    h3{
-                        margin-bottom: 8px;
-                    }
-                    .content__payment-body{
-                        border-top: 1px solid #ccc;
-                        border-left: 1px solid #ccc;
-
-                        .content__radio{
-                            padding: 18px 20px;
-                            border-bottom: 1px solid #ccc;
-                            border-right: 1px solid #ccc;
-                            display: flex;
-                            align-items: center;
-
-                            .radio__des{
-                                margin-left: 6px;
-                                p{
-                                    font-size: 1.3rem;
-                                    margin-top: 4px;
-                                    font-weight: 300;
-                                    color: #aaa;
-                                }
-                            }
-
-                          
-                           
-                        }
-                     
-                    }
-                }
-            }
-           
-
-           
-        }
-        .checkout__footer{
-            margin-top: 18px;
-            padding: 8px 0;
-            border-top: 1px solid #ccc;
-            width: 100%;
-            &-policy{
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
-                gap: 10px;
-                &__item{
-                    list-style: none;
-                    .checkout__footer-policy__link{
-                        text-decoration: none;
-                        color: var(--primary-color);
-                        font-weight:300;
-                        font-size: 1.5rem;
-                    }
-                }
-                
-            }
-            &-address{
-                display: flex;
-                flex-direction: column;
-                align-items: flex-end;
-                font-size: 1.4rem;
-                margin: 10px 0;
-                font-weight: 400;
-            }
-        }
+        }          
+         
    }
 
+    .content__payment{
+        width: 30%;
+        padding-right: 20px;
+        h3{
+            margin-bottom: 8px;
+            font-size: 2.8rem;
+        }
+        .content__payment-body{
+            border-top: 1px solid #ccc;
+            border-left: 1px solid #ccc;
+
+            .content__radio{
+                padding: 18px 20px;
+                border-bottom: 1px solid #ccc;
+                border-right: 1px solid #ccc;
+                display: flex;
+                align-items: center;
+
+                .radio__des{
+                    margin-left: 6px;
+                    p{
+                        font-size: 1.3rem;
+                        margin-top: 4px;
+                        font-weight: 300;
+                        color: #aaa;
+                 }
+            }
+               
+        }     
+    }
+}  
+
    .checkout__order{
-        width: 32%;
+        width: 30%;
         padding: 18px 24px;
         background-color: #fafafa;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+
         .order__title{
-            font-size: 1.8rem;
+            font-size: 2.8rem;
             font-weight: 600;
             margin-bottom: 18px;
             padding-bottom: 18px;
@@ -148,28 +94,7 @@
                 font-weight: 300;
             }
         }
-        .order__sale{
-            margin-bottom: 18px;
-            padding-bottom: 18px;
-            border-bottom: 1px solid #ccc;
-            display: flex;
-            justify-content: space-between;
-            gap: 10px;
-            .order__input{
-                outline: none;
-                font-size: 1.5rem;
-                padding-left: 8px;
-                flex-grow: 1;
-                border-radius: 6px;
-                border: 1px solid var(--primary-color);
-            }
-            .order__button{
-                background-color: var(--primary-color);
-                color: #fff;
-                padding: 12px 18px;
-                border-radius: 6px;
-            }
-        }
+        
         .order__total{
             margin-bottom: 18px;
             padding-bottom: 18px;
@@ -241,4 +166,29 @@
         
         
    }
+}
+
+@media screen and (max-width: 1023px){
+    .checkout{
+        flex-direction: column;
+
+        h3{
+            text-align: center;
+        }
+       
+    }
+    .checkout__info,
+    .content__payment,
+    .checkout__order{
+        width: 100% !important;
+        margin-bottom: 20px;
+    }
+
+    .checkout__order{
+        position: unset !important;
+    }
+
+    .checkout__logo{
+        text-align: center;
+    }
 }
